# Platformy

./: .gitignore  CMakeLists.txt
code/: main.cpp
code/Data/: World.cpp
code/Engine/Core/: JSONSerializer.cpp
code/Engine/GUI/: Button.cpp  Container.cpp  Event.cpp  GUIRoot.cpp  Widget.cpp  Window.cpp
code/UI/: BlockPalette.cpp  Button.cpp  Container.cpp  Event.cpp  GUIRoot.cpp  Widget.cpp  Window.cpp
data/: world.json
header/Data/: Block.hpp  BlockDescriptor.hpp  Grid2D.hpp  World.hpp
header/Engine/Core/: BlockDescriptor.hpp  JSONSerializer.hpp  TextureAtlas.hpp  World.hpp
header/Engine/GUI/: Button.hpp  Container.hpp  Defaults.hpp  GUIRoot.hpp  Group.hpp  Widget.hpp  Window.hpp
header/Engine/GUI/Exceptions/: NoSuchWidgetException.hpp
header/UI/: BlockPalette.hpp  Button.hpp  Container.hpp  Event.hpp  GUIRoot.hpp  Group.hpp  SimpleButton.hpp  Widget.hpp  Window.hpp
tools/: simple_atlas_pattern.py
